force-app/main/default/objects/Sales_Data_Import_Batch__c/Sales_Data_Import_Batch__c.object-meta.xml
<CustomObject>
    <label>Sales Data Import Batch</label>
    <nameField>
        <displayFormat>SDIB-{00000}</displayFormat>
        <label>Sales Data Import Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data Import Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>