force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/Aliases_Created__c.field-meta.xml
<CustomField>
    <fullName>Aliases_Created__c</fullName>
    <label>Aliases Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>