force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>