force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <label>Distributor Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>