force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <label>Needs Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>