force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/Report_Month__c.field-meta.xml
<CustomField>
    <fullName>Report_Month__c</fullName>
    <label>Report Month</label>
    <type>Date</type>
</CustomField>