force-app/main/default/objects/Sales_Data_Import_Batch__c/fields/Rows_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Rows_Inserted__c</fullName>
    <label>Rows Inserted</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>